@@ -1,3 +1,8 @@
+2016-04-21  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* application-src/amrandom.pl: A new application that generate a
+	  random backup, useful for testing
+	* application-src/Makefile.am (SCRIPTS_PERL): Add amrandom
+
 2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/pp-scripts.pl: Print more info on failure
 
